example-files/nginx.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: pblaas/nginx-opentracing:latest 
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 80
      - image: jaegertracing/jaeger-agent 
        name: jaeger-agent  
        ports:  
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        command:  
        - "/go/bin/agent-linux"
        - "--collector.host-port=jaeger-collector.jaeger-infra.svc:14267"
